Tela de Criar nova categoria

--- a/ConectaCafe/Views/Categorias/Edit.cshtml
+++ b/ConectaCafe/Views/Categorias/Edit.cshtml
@@ -1,7 +1,8 @@
 @model ConectaCafe.Models.Categoria
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edição";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Edit</h1>
