--- a/ConectaCafe/Views/Categorias/Delete.cshtml
+++ b/ConectaCafe/Views/Categorias/Delete.cshtml
@@ -1,10 +1,11 @@
 @model ConectaCafe.Models.Categoria
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
