--- a/ConectaCafe/Views/Categorias/Details.cshtml
+++ b/ConectaCafe/Views/Categorias/Details.cshtml
@@ -1,10 +1,11 @@
 @model ConectaCafe.Models.Categoria
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Categoria</h4>
