--- a/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
+++ b/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
@@ -20,6 +20,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="~/assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="~/img/icons/favicon.png">
+
   <title>
     ConectaCafé - @ViewData["Title"]
   </title>
@@ -35,13 +36,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="~/assets/css/material-dashboard.css?v=3.1.0" rel="stylesheet" />
+  <!-- DataTable -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css" />
 </head>
 
 <body class="g-sidenav-show bg-gray-200" class="min-vh-100">
   <aside
     class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark"
     id="sidenav-main">
-    
+
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
@@ -53,7 +56,8 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Dashboard" ? "active bg-gradient-warning" : "")' asp-controller="Admin" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Dashboard" ? "active bg-gradient-primary" : "")'
+            asp-controller="Admin" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">dashboard</i>
             </div>
@@ -64,7 +68,8 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Cadastros</h6>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Produtos" ? "active bg-gradient-warning" : "")' asp-controller="Produtos" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Produtos" ? "active bg-gradient-primary" : "")'
+            asp-controller="Produtos" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">inventory_2</i>
             </div>
@@ -72,7 +77,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Categorias" ? "active bg-gradient-warning" : "")' asp-controller="Categorias" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Categorias" ? "active bg-gradient-primary" : "")'
+            asp-controller="Categorias" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">category</i>
             </div>
@@ -80,7 +86,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Cores" ? "active bg-gradient-warning" : "")' asp-controller="Cores" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Cores" ? "active bg-gradient-primary" : "")'
+            asp-controller="Cores" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">rss_feed</i>
             </div>
@@ -88,7 +95,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Tamanhos" ? "active bg-gradient-warning" : "")' asp-controller="Tamanhos" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Tamanhos" ? "active bg-gradient-primary" : "")'
+            asp-controller="Tamanhos" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">star</i>
             </div>
@@ -99,7 +107,8 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Segurança</h6>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuários" ? "active bg-gradient-warning" : "")' asp-controller="Usuarios" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuários" ? "active bg-gradient-primary" : "")'
+            asp-controller="Usuarios" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">account_circle</i>
             </div>
@@ -107,7 +116,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Configurações" ? "active bg-gradient-warning" : "")' asp-controller="Usuarios" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Configurações" ? "active bg-gradient-primary" : "")'
+            asp-controller="Usuarios" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">settings</i>
             </div>
@@ -125,6 +135,7 @@
       </div>
     </div>
   </aside>
+
   <main class="main-content border-radius-lg d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
@@ -133,8 +144,8 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">
-              Página
-            </a></li>
+                Página
+              </a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">@ViewData["Title"]</li>
           </ol>
           <h6 class="font-weight-bolder mb-0">@ViewData["Title"]</h6>
@@ -167,29 +178,31 @@
     <div class="container-fluid pt-4 pe-3 flex-grow-1">
 
       @RenderBody()
-      
+
     </div>
 
     <footer class="footer pb-2 w-100">
-        <div class="container-fluid">
-          <div class="row align-items-center justify-content-lg-between">
-            <div class="col mb-lg-0 mb-4">
-              <div class="copyright text-center text-sm text-muted">
-                ©
-                @DateTime.Now.Year,
-                desenvolvido por <a href="https://gallojunior.github.io" class="font-weight-bold" target="_blank">
-                  José Antonio Gallo Junior
-                </a>
-                com template de
-                <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>.
-              </div>
+      <div class="container-fluid">
+        <div class="row align-items-center justify-content-lg-between">
+          <div class="col mb-lg-0 mb-4">
+            <div class="copyright text-center text-sm text-muted">
+              ©
+              @DateTime.Now.Year,
+              desenvolvido por <a href="https://gallojunior.github.io" class="font-weight-bold" target="_blank">
+                José Antonio Gallo Junior
+              </a>
+              com template de
+              <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>.
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
+
   </main>
 
   <!--   Core JS Files   -->
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
   <script src="~/assets/js/core/popper.min.js"></script>
   <script src="~/assets/js/core/bootstrap.min.js"></script>
   <script src="~/assets/js/plugins/perfect-scrollbar.min.js"></script>
@@ -207,6 +220,9 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="~/assets/js/material-dashboard.min.js?v=3.1.0"></script>
+
+  <!-- DataTable -->
+  <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </body>
 
