--- a/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
+++ b/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
@@ -176,9 +176,7 @@
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid pt-4 pe-3 flex-grow-1">
-
       @RenderBody()
-
     </div>
 
     <footer class="footer pb-2 w-100">
@@ -219,10 +217,13 @@
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="~/assets/js/material-dashboard.min.js?v=3.1.0"></script>
+  <script src="~/assets/js/material-dashboard.js"></script>
 
   <!-- DataTable -->
   <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
+
+  <!-- Novo Javascript -->
+  <script src="~/assets/js/site.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </body>
 
