--- a/ConectaCafe/Views/Produtos/Create.cshtml
+++ b/ConectaCafe/Views/Produtos/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
 
             <div class="card-body pb-2">
-                <form asp-action="Create" class="row">
+                <form asp-action="Create" class="row"  enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="col-lg-8 col-md-9">
                         <div class="col-12 mb-3">
@@ -62,7 +62,7 @@
 
                     <div class="col-lg-4 col-md-3">
                         <img id="Preview" src="~/img/semFoto.png" class="w-75" alt="Sem foto" onclick="changeImage()">
-                        <input type="hiden" asp-for="Foto">
+                        <input type="hidden" asp-for="Foto">
                         <input type="file" id="Arquivo" name="Arquivo" accept=".jpg, .jpeg, .png, .gif" hidden>
                     </div>
 
@@ -80,16 +80,15 @@
     <script>
         function changeImage() {
             document.querySelector("input[type='file']").click();
-            window.addEventListener('load', function () {
-                document.querySelector("input[type='file']")
-                    .addEventListener('change', function () {
-                        if (this.files && this.files[0) {
-                            var img = document.getElementById("Preview");
-                            img.src = URL.createObjectURL(this.files[0]);
-                        }
-                    });
-            });
-
         }
+
+        window.addEventListener('load', function () {
+            document.querySelector("input[type='file']").addEventListener('change', function () {
+                if (this.files && this.files[0]) {
+                    var img = document.getElementById("Preview");
+                    img.src = URL.createObjectURL(this.files[0]);
+                }
+            });
+        });
     </script>
 }
