--- a/ConectaCafe/Views/Produtos/Delete.cshtml
+++ b/ConectaCafe/Views/Produtos/Delete.cshtml
@@ -23,8 +23,8 @@
                     <div class="col-lg-8 col-md-9">
                         <div class="col-12 mb-3">
                             <div class="input-group input-group-outline mb-1">
-                                <label asp-for="Nome" for="floatingInput" class="form-label" ></label>
-                                <input asp-for="Nome" class="form-control" readonly/>
+                                <label asp-for="Nome" for="floatingInput" class="form-label"></label>
+                                <input asp-for="Nome" class="form-control" readonly />
                             </div>
                             <span asp-validation-for="Nome" class="text-danger text-sm"></span>
                         </div>
@@ -52,7 +52,7 @@
                             <div class="col-4 me-3">
                                 <div class="input-group input-group-outline mb-1">
                                     <label asp-for="Preco" for="floatingInput" class="form-label"></label>
-                                    <input asp-for="Preco" class="form-control" readonly/>
+                                    <input asp-for="Preco" class="form-control" readonly />
                                 </div>
                                 <span asp-validation-for="Preco" class="text-danger text-sm"></span>
                             </div>
@@ -60,67 +60,19 @@
                     </div>
 
                     <div class="col-lg-4 col-md-3">
-                        <img src="~/img/semFoto.png" class="w-75" alt="Sem foto" onclick="changeImage()" readonly>
-                        <input type="" name="" id="">
+                        <img src='@(Model.Foto ?? Url.Content("~/img/sem-foto.png"))' class="w-75" alt="Sem foto"
+                            onclick="changeImage()" readonly>
+                        <input type="hidden" asp-for="Foto">
                         <input type="file" id="Arquivo" name="Arquivo" accept=".jpg, .jpeg, .png, .gif" hidden>
                     </div>
 
                     <div class="pb-3">
-                        <input type="submit" value="Criar" class="btn btn-success me-3" />
-                        <a asp-action="Index" class="btn btn-primary">Cancelar</a>
+                        <input type="hidden" asp-for="Id" />
+                        <input type="submit" value="Delete" class="btn btn-primary me-3" />
+                        <a asp-action="Index" class="btn btn-info">Cancelar</a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-</div>
-
-
-
-
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Produto</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Preco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Preco)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Foto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Foto)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Categoria.Nome)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
