--- a/ConectaCafe/Views/Produtos/Details.cshtml
+++ b/ConectaCafe/Views/Produtos/Details.cshtml
@@ -1,10 +1,9 @@
 @model ConectaCafe.Models.Produto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Produtos";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
 
 <div class="row">
     <div class="col">
@@ -19,26 +18,43 @@
             <div class="card-body pb-2">
                 <div class="row">
                     <div class="col-lg-8 col-md-9">
-                        <div class="input-group input-group-outline mb-1">
-                            <label asp-for="Nome" class="form-label"></label>
-                            <input asp-for="Nome" class="form-control" readonly />
+                        <div class="col-12 mb-3">
+                            <div class="input-group input-group-outline mb-1">
+                                <label asp-for="Nome" class="form-label"></label>
+                                <input asp-for="Nome" class="form-control" readonly />
+                            </div>
                         </div>
-                        <div class="input-group input-group-outline mb-1">
-                            <label asp-for="Descricao" class="form-label"></label>
-                            <input asp-for="Descricao" class="form-control" readonly />
+
+                        <div class="col-12 mb-3">
+                            <div class="input-group input-group-outline mb-1">
+                                <label asp-for="Descricao" class="form-label"></label>
+                                <textarea asp-for="Descricao" class="form-control" readonly ></textarea>
+                            </div>
                         </div>
-                        <div class="input-group input-group-outline mb-1">
-                            <label asp-for="Preco" class="form-label"></label>
-                            <input asp-for="Preco" class="form-control" readonly />
-                        </div>
-                        <div class="input-group input-group-outline mb-1">
-                            <label asp-for="Categoria" class="form-label"></label>
-                            <input asp-for="Categoria.Nome" class="form-control" readonly />
+
+                        <div class="row">
+                            <div class="col-8 mb-3">
+                                <div class="input-group input-group-outline mb-1">
+                                    <label asp-for="Preco" class="form-label"></label>
+                                    <input asp-for="Preco" class="form-control" readonly />
+                                </div>
+                            </div>
+                            <div class="col-4 mb-3">
+                                <div class="input-group input-group-outline mb-1">
+                                    <label asp-for="Categoria" class="form-label"></label>
+                                    <input asp-for="Categoria.Nome" class="form-control" readonly />
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-3">
-                        <img src="~/img/semFoto.png" class="w-100" alt="">
+                        <img id="Preview" src='@(Model.Foto ?? Url.Content("~/img/sem-foto.png"))' class="w-75"
+                            alt="Foto">
+                        <input type="hidden" asp-for="Foto">
+                        <input type="file" id="Arquivo" name="Arquivo" accept=".jpg, .jpeg, .png, .gif" hidden>
                     </div>
+
                     <div class="mb-3">
                         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
                         <a asp-action="Index" class="btn btn-primary">Voltar</a>
@@ -47,50 +63,4 @@
             </div>
         </div>
     </div>
-</div>
-
-
-
-
-<h1>Details</h1>
-
-<div>
-    <h4>Produto</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Preco)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Preco)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Foto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Foto)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Categoria)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Categoria.Nome)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
