--- a/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
+++ b/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
@@ -86,8 +86,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Cores" ? "active bg-gradient-primary" : "")'
-            asp-controller="Cores" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Blogs" ? "active bg-gradient-primary" : "")'
+            asp-controller="Blogs" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">rss_feed</i>
             </div>
@@ -95,8 +95,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Tamanhos" ? "active bg-gradient-primary" : "")'
-            asp-controller="Tamanhos" asp-action="Index">
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Avaliacoes" ? "active bg-gradient-primary" : "")'
+            asp-controller="Avaliacoes" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">star</i>
             </div>
@@ -107,7 +107,7 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Segurança</h6>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuários" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuarios" ? "active bg-gradient-primary" : "")'
             asp-controller="Usuarios" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">account_circle</i>
