--- a/ConectaCafe/Views/Shared/_Layout.cshtml
+++ b/ConectaCafe/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark"  asp-controller="Categorias" asp-action="Index">Categorias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-controller="Blog" asp-action="Index">Blog</a>
+                            <a class="nav-link text-dark"  asp-controller="Blogs" asp-action="Index">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="Avaliacoes" asp-action="Index">Avaliações</a>
