--- a/ConectaCafe/Views/Home/Index.cshtml
+++ b/ConectaCafe/Views/Home/Index.cshtml
@@ -64,9 +64,9 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="#home">Home</a></li>
-				          <li><a href="#about">About</a></li>
+				          <li><a href="#about">Sobre</a></li>
 				          <li><a href="#coffee">Coffee</a></li>
-				          <li><a href="#review">Review</a></li>
+				          <li><a href="#review">Avaliações</a></li>
 				          <li><a href="#blog">Blog</a></li>
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
@@ -86,12 +86,12 @@
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-start">
 						<div class="banner-content col-lg-7">
-							<h6 class="text-white text-uppercase">Now you can feel the Energy</h6>
+							<h6 class="text-white text-uppercase">Agora você pode renovar suas energias</h6>
 							<h1>
-								Start your day with <br>
-								a black Coffee				
+								Começe o seu dia <br>
+								com um café				
 							</h1>
-							<a href="#" class="primary-btn text-uppercase">Buy Now</a>
+							<a href="#" class="primary-btn text-uppercase">Comprar</a>
 						</div>											
 					</div>
 				</div>
