Projeto finalizado | Falta acertar as cores

--- a/ConectaCafe/Views/Blogs/Create.cshtml
+++ b/ConectaCafe/Views/Blogs/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col">
         <div class="card my-4">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+                <div class="bg-gradient-success shadow-success border-radius-lg pt-4 pb-3">
                     <h4 class="text-white text-capitalize ps-3">@ViewData["Title"]</h4>
                     <h6 class="text-white text-capitalize ps-3">Criar</h6>
                 </div>
@@ -45,7 +45,7 @@
                         <div class="col-12 mb-3">
                             <div class="input-group input-group-outline mb-1">
                                 <label asp-for="Texto" for="floatingInput" class="form-label"></label>
-                                <textarea asp-for="Texto" class="form-control" rows="5" /></textarea>
+                                <textarea asp-for="Texto" class="form-control" rows="5" ></textarea>
                             </div>
                             <span asp-validation-for="Texto" class="text-danger text-sm"></span>
                         </div>
@@ -81,7 +81,7 @@
 
                     <div class="pb-3">
                         <input type="submit" value="Criar" class="btn btn-success me-3" />
-                        <a asp-action="Index" class="btn btn-primary">Cancelar</a>
+                        <a asp-action="Index" class="btn btn-success">Cancelar</a>
                     </div>
                 </form>
             </div>
