--- a/ConectaCafe/Views/Categorias/Create.cshtml
+++ b/ConectaCafe/Views/Categorias/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="col-12">
         <div class="card my-4">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+                <div class="bg-gradient-success shadow-success border-radius-lg pt-4 pb-3">
                     <h4 class="text-white text-capitalize ps-3">@ViewData["Title"]</h4>
                     <h6 class="text-white text-capitalize ps-3">Adicionar</h6>
                 </div>
@@ -29,7 +29,7 @@
 
                     <div class="pb-3">
                         <input type="submit" value="Criar" class="btn btn-success me-3" />
-                        <a asp-action="Index" class="btn btn-primary">Cancelar</a>
+                        <a asp-action="Index" class="btn btn-success">Cancelar</a>
                     </div>
                 </form>
             </div>
