--- a/ConectaCafe/Views/Categorias/Details.cshtml
+++ b/ConectaCafe/Views/Categorias/Details.cshtml
@@ -11,7 +11,7 @@
     <div class="col-12 mb-3">
         <div class="card my-4">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+                <div class="bg-gradient-success shadow-success border-radius-lg pt-4 pb-3">
                     <h4 class="text-white text-capitalize ps-3">@ViewData["Title"]</h4>
                     <h6 class="text-white text-capitalize ps-3">Detalhes</h6>
                 </div>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="mb-3">
                         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
-                        <a asp-action="Index" class="btn btn-primary">Voltar</a>
+                        <a asp-action="Index" class="btn btn-success">Voltar</a>
                     </div>
                 </div>
             </div>
