--- a/ConectaCafe/Views/Avaliacoes/Index.cshtml
+++ b/ConectaCafe/Views/Avaliacoes/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="card my-4">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div
-                    class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3 d-flex align-itens-center justify-content-between">
+                    class="bg-gradient-success shadow-success border-radius-lg pt-4 pb-3 d-flex align-itens-center justify-content-between">
                     <h5 class="text-white text-capitalize ps-3 m-0">@ViewData["Title"]</h5>
                     <a asp-action="Create" class="text-white text-capitalize pe-3 d-flex  align-items-center">
                         <i class="material-icons pe-2">add</i> Adicionar</a>
@@ -32,7 +32,7 @@
                                 </th>
 
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                    @Html.DisplayNameFor(model => model.DataAvaliacao)
+                                   Data Avaliação
                                 </th>
 
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
