--- a/ConectaCafe/Views/Blogs/Index.cshtml
+++ b/ConectaCafe/Views/Blogs/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card my-4">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div
-                    class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3 d-flex align-itens-center justify-content-between">
+                    class="bg-gradient-success shadow-success border-radius-lg pt-4 pb-3 d-flex align-itens-center justify-content-between">
                     <h5 class="text-white text-capitalize ps-3 m-0">@ViewData["Title"]</h5>
                     <a asp-action="Create" class="text-white text-capitalize pe-3 d-flex  align-items-center">
                         <i class="material-icons pe-2">add</i> Adicionar</a>
@@ -37,7 +37,7 @@
                                 </th>
 
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                    @Html.DisplayNameFor(model => model.Foto)
+                                    @Html.DisplayNameFor(model => model.DataBlog)
                                 </th>
 
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
@@ -58,7 +58,7 @@
                                         @Html.DisplayFor(modelItem => item.Texto)
                                     </td>
                                     <td class="text-dark text-sm">
-                                        @Html.DisplayFor(modelItem => item.Foto)
+                                        @Html.DisplayFor(modelItem => item.DataBlog)
 
                                     </td>
                                     <td>
@@ -104,64 +104,3 @@
         });
     </script>
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Titulo)
-                            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Texto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Foto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataBlog)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-                    <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Titulo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Texto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Foto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataBlog)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-            </tbody>
-</table>
