--- a/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
+++ b/ConectaCafe/Views/Shared/_LayoutAdmin.cshtml
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Dashboard" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Dashboard" ? "active bg-gradient-success" : "")'
             asp-controller="Admin" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">dashboard</i>
@@ -68,7 +68,7 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Cadastros</h6>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Produtos" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Produtos" ? "active bg-gradient-success" : "")'
             asp-controller="Produtos" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">inventory_2</i>
@@ -77,7 +77,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Categorias" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Categorias" ? "active bg-gradient-success" : "")'
             asp-controller="Categorias" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">category</i>
@@ -86,7 +86,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Blogs" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Blogs" ? "active bg-gradient-success" : "")'
             asp-controller="Blogs" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">rss_feed</i>
@@ -95,7 +95,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Avaliacoes" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Avaliacoes" ? "active bg-gradient-success" : "")'
             asp-controller="Avaliacoes" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">star</i>
@@ -107,7 +107,7 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Segurança</h6>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuarios" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Usuarios" ? "active bg-gradient-success" : "")'
             asp-controller="Usuarios" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">account_circle</i>
@@ -116,7 +116,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Configurações" ? "active bg-gradient-primary" : "")'
+          <a class='nav-link text-white @(ViewData["Title"].ToString() == "Configurações" ? "active bg-gradient-success" : "")'
             asp-controller="Usuarios" asp-action="Index">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">settings</i>
